

2010-07-03 - Version 1.6

* jQuery client plugin added.
* General refactoring of directory structure.
* Composite primary keys now allowed.
* Added templates and make options hash commented and much easier to
understand.
* Custom queries can now save back to the table.
* Changes in auto incremented values are now reflected in the table.
* The primary key field is no longer hidden by default.
* database["columns"] changed to database["fields"]
* database["database"] changed to database["name"]
* database["host"] now allowed in addition to database["server"]
* All fields except auto increment field are now editable by default.
* Both "host" and "server" are now accepted to specify the DB server.
* Allowed transformed data to be returned from the server with the transform applied.

2010-10-17 - Version 1.6.1

* Fixed major bug in the jQuery client where field names in new row were being
overwritten.
* Fixed but in PHP where last_insert_id was being blocked by finding the
primary keys.
* Added option for utf8 support
* New configuration for test files