@@ -141,11 +141,12 @@
         $('#addNewRow_' + id).hide();
         emptyRow = $('#newDataRow_' + id);
         addRow = $('<p class="addRow"/>');
-        if(rows.length > 0) addRow.hide();
+        if(rows.length > 0 && !options.showAddNewRow) addRow.hide();
         var addRowLink = $('<a href="#add_row">' + options.addRowLabel + '</a>');
         addRowLink.click(function(){
-          walkCells(null, null, null, 1);
-          addRow.hide();
+          var row = addNewRow();
+          if(!options.showAddNewRow) addRow.hide();
+          $('td:visible:first', row).click();
           return false;
         });
         addRow.append(addRowLink);
@@ -301,11 +302,12 @@
 
     function addNewRow(){
       $('.noDataRow', tbody).remove();
-      var newRow = emptyRow.clone();
+      var newRow = emptyRow.clone().removeAttr('id');
       newRow.removeAttr('style');
       tbody.append(newRow);
       if(window.HotText) new HotText(".hotText", {scope: newDataRow});
-      initializeRow(newRow, rows.length - 1);
+      initializeRow(newRow, rows.length);
+      return newRow;
     }
 
     function removeUnusedRows(currentRow){
